--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django==3.0.2
-django-extension==2.2.5
+django-extensions==2.2.5
 django-allauth==0.41.0
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
