--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==3.0.2
+django-debug-toolbar==2.1
+django-debug-toolbar-template-profiler==2.0.0
 django-extensions==2.2.5
 django-allauth==0.41.0
 django-rest-auth==0.9.5
